--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,69 @@
+absl-py==2.0.0
+astunparse==1.6.3
+cachetools==5.3.2
 certifi==2023.5.7
+chardet==5.2.0
 charset-normalizer==3.2.0
 contourpy==1.1.1
 cycler==0.12.1
 filelock==3.12.4
+flatbuffers==23.5.26
 fonttools==4.43.1
 fsspec==2023.9.2
+gast==0.5.4
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-pasta==0.2.0
+grpcio==1.59.2
+h5py==3.10.0
 idna==3.4
 Jinja2==3.1.2
+joblib==1.3.2
+jsonpickle==3.0.2
+keras==2.15.0
 kiwisolver==1.4.5
+libclang==16.0.6
+Markdown==3.5.1
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+ml-dtypes==0.2.0
+more-itertools==10.1.0
 mpmath==1.3.0
+music21==9.1.0
 networkx==3.1
 numpy==1.25.1
+oauthlib==3.2.2
+opt-einsum==3.3.0
 osmium==3.6.0
 packaging==23.1
 Pillow==10.0.1
 plotly==5.15.0
+protobuf==4.23.4
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
 pybind11==2.10.4
 pyparsing==3.1.1
 python-dateutil==2.8.2
 PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
+requests-oauthlib==1.3.1
+rsa==4.9
 SciPy==1.11.1
 six==1.16.0
 sympy==1.12
 tenacity==8.2.2
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.34.0
+tensorflow-macos==2.15.0
+termcolor==2.3.0
 torch==2.1.0
 tqdm==4.66.1
 typing_extensions==4.8.0
 urllib3==2.0.4
+webcolors==1.13
+Werkzeug==3.0.1
+wrapt==1.14.1
