--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,145 @@
 absl-py==2.0.0
+anyio==4.1.0
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
 astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.13.1
+beautifulsoup4==4.12.2
+bleach==6.1.0
 cachetools==5.3.2
 certifi==2023.5.7
+cffi==1.16.0
 chardet==5.2.0
 charset-normalizer==3.2.0
+comm==0.2.0
 contourpy==1.1.1
 cycler==0.12.1
+Cython==3.0.4
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+dm-tree==0.1.8
+docopt==0.6.2
+executing==2.0.1
+fastjsonschema==2.19.0
 filelock==3.12.4
 flatbuffers==23.5.26
+fluidsynth==0.2
 fonttools==4.43.1
+fqdn==1.5.1
 fsspec==2023.9.2
 gast==0.5.4
+gitdb==4.0.11
+GitPython==3.1.40
 google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-pasta==0.2.0
-grpcio==1.59.2
+graphviz==0.20.1
+grpcio==1.59.3
 h5py==3.10.0
 idna==3.4
+ipykernel==6.27.1
+ipython==8.18.1
+isoduration==20.11.0
+jedi==0.19.1
 Jinja2==3.1.2
 joblib==1.3.2
+json5==0.9.14
 jsonpickle==3.0.2
+jsonpointer==2.4
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.6.0
+jupyter_core==5.5.0
+jupyter_server==2.11.1
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.9
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.25.2
 keras==2.15.0
+keras-self-attention==0.51.0
 kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mido==1.3.0
+mingus==0.6.1
+mistune==3.0.2
 ml-dtypes==0.2.0
 more-itertools==10.1.0
 mpmath==1.3.0
 music21==9.1.0
+namex==0.0.7
+nbclient==0.9.0
+nbconvert==7.11.0
+nbformat==5.9.2
+nest-asyncio==1.5.8
 networkx==3.1
+notebook==7.0.6
+notebook_shim==0.2.3
 numpy==1.25.1
 oauthlib==3.2.2
 opt-einsum==3.3.0
 osmium==3.6.0
+overrides==7.4.0
 packaging==23.1
+pandas==2.0.3
+pandocfilters==1.5.0
+parso==0.8.3
+pbr==5.11.1
+pexpect==4.9.0
 Pillow==10.0.1
+pipreqs==0.4.13
+platformdirs==4.0.0
 plotly==5.15.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.41
 protobuf==4.23.4
-pyasn1==0.5.0
+psutil==5.9.6
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.5.1
 pyasn1-modules==0.3.0
-pybind11==2.10.4
+pycparser==2.21
+pyFluidSynth==1.3.2
+Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2023.3
 PyYAML==6.0.1
+pyzmq==25.1.1
+referencing==0.31.1
 regex==2023.10.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.0
+rpds-py==0.13.2
 rsa==4.9
-SciPy==1.11.1
+scikit-learn==1.3.2
+scipy==1.11.3
+seaborn==0.13.0
+Send2Trash==1.8.2
 six==1.16.0
+sklearn==0.0.post11
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+stevedore==5.1.0
 sympy==1.12
 tenacity==8.2.2
 tensorboard==2.15.1
@@ -60,10 +149,24 @@ tensorflow-estimator==2.15.0
 tensorflow-io-gcs-filesystem==0.34.0
 tensorflow-macos==2.15.0
 termcolor==2.3.0
+terminado==0.18.0
+threadpoolctl==3.2.0
+tinycss2==1.2.1
 torch==2.1.0
+torchvision==0.16.0
+torchviz==0.0.2
+tornado==6.4
 tqdm==4.66.1
+traitlets==5.14.0
+types-python-dateutil==2.8.19.14
 typing_extensions==4.8.0
-urllib3==2.0.4
+tzdata==2023.3
+uri-template==1.3.0
+urllib3==2.0.3
+wcwidth==0.2.12
 webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.4
 Werkzeug==3.0.1
 wrapt==1.14.1
+yarg==0.1.9
